# scDataset

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  evaluate_scdataset.py  pyproject.toml  scdataset.py  tahoe_tutorial.ipynb  test_multiindexable.py
.github/workflows/: documentation-simple.yml.backup  documentation.yml  tests.yml
benchmarks/: README.md  __init__.py  evaluate_scdataset.py  plot_utils.py  plots.ipynb  requirements.txt  run_experiments.sh  utils.py
benchmarks/experiments/: block_size_fetch_factor_eval_anncollection_random.csv  block_size_fetch_factor_eval_anncollection_random.out  block_size_fetch_factor_eval_anncollection_random.yaml  block_size_fetch_factor_eval_bionemo_random.csv  block_size_fetch_factor_eval_bionemo_random.out  block_size_fetch_factor_eval_bionemo_random.yaml  block_size_fetch_factor_eval_huggingface_random.csv  block_size_fetch_factor_eval_huggingface_random.out  block_size_fetch_factor_eval_huggingface_random.yaml  high_throughput_eval_anncollection_random.csv  high_throughput_eval_anncollection_random.out  high_throughput_eval_anncollection_random.yaml
benchmarks/experiments_bkp/: block_size_fetch_factor_eval_anncollection_random.csv  block_size_fetch_factor_eval_anncollection_random.yaml  block_size_fetch_factor_eval_bionemo_random.yaml  block_size_fetch_factor_eval_huggingface_random.csv  block_size_fetch_factor_eval_huggingface_random.yaml
benchmarks/tests/: __init__.py  test_benchmark_utils.py
docs/: requirements.txt
docs/source/: changelog.rst  citation.rst  conf.py  ddp.rst  examples.rst  google-verification.html  index.rst  installation.rst  quickstart.rst  scdataset.rst  transforms.rst
docs/source/_templates/autosummary/: class.rst
docs/source/notebooks/: tahoe_tutorial.ipynb
experiments/: block_size_fetch_factor_eval_anncollection_random.yaml  block_size_fetch_factor_eval_bionemo_random.yaml  block_size_fetch_factor_eval_huggingface_random.yaml  high_throughput_eval_anncollection_random.csv  high_throughput_eval_anncollection_random.yaml
paper_experiments/: README.md  evaluate_scdataset.py  requirements.txt  run_experiments.sh
paper_experiments/experiments/: block_size_fetch_factor_eval_bionemo_random.csv  block_size_fetch_factor_eval_bionemo_random.yaml  block_size_fetch_factor_eval_huggingface_random.yaml
src/scdataset/: __init__.py  auto_config.py  multiindexable.py  scdataset.py  strategy.py  transforms.py
src/scdataset/experimental/: __init__.py  auto_config.py
tests/: __init__.py  conftest.py  test_auto_config.py  test_ddp_real.py  test_docstrings.py  test_multiindexable.py  test_scdataset.py  test_strategy.py  test_transforms.py
training_experiments/: README.md  __init__.py  requirements.txt
training_experiments/analysis/: __init__.py  plotting.py
training_experiments/configs/: default.yaml  pilot.yaml
training_experiments/data/: __init__.py  label_encoder.py  loader.py
training_experiments/data/mappings/: cell_line_code_map.pkl  drug_code_map.pkl  drug_to_moa_broad.pkl  drug_to_moa_fine.pkl
training_experiments/experiments/: __init__.py  run_all.py
training_experiments/models/: __init__.py  linear.py
training_experiments/notebooks/: analyze_results.ipynb
training_experiments/results/: comparison_pivot.csv  comparison_results.csv
training_experiments/results/main/: comparison_pivot.csv  comparison_results.csv
training_experiments/results/main/block_shuffling_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/main/random_sampling_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/main/streaming_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/main/streaming_buffer_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/pilot/: comparison_pivot.csv  comparison_results.csv  summary.json
training_experiments/results/pilot/block_shuffling_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/pilot/block_weighted_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/pilot/random_sampling_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/pilot/streaming_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/pilot/streaming_buffer_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/pilot/true_weighted_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/streaming_64bs_0.001lr/: results.json  results.pkl
training_experiments/results/streaming_buffer_64bs_0.001lr/: results.json  results.pkl
training_experiments/tests/: __init__.py  test_config.py  test_data_loading.py  test_models.py  test_weights.py
training_experiments/trainers/: __init__.py  multitask.py
training_experiments/utils/: __init__.py  config.py  weights.py
