[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "scDataset"
version = "0.1.0"
description = "Scalable Data Loading for Deep Learning on Large-Scale Single-Cell Omics"
authors = [
    { name = "Davide D'Ascenzo", email = "davide.dascenzo.work@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.17.0",
    "torch >=1.2.0",
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Kidara/scDataset"
Issues = "https://github.com/Kidara/scDataset/issues"