[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "scDataset"
version = "0.3.0"
description = "Scalable Data Loading for Deep Learning on Large-Scale Single-Cell Omics"
authors = [
    { name = "Davide D'Ascenzo", email = "davide.dascenzo.work@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.17.0",
    "torch >=1.2.0",
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-book-theme>=1.0.0",
    "sphinx-sitemap>=2.5.0",
    "nbsphinx>=0.9.0",
    "pandoc>=2.0.0",
]
auto = [
    "psutil>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/scDataset/scDataset"
Issues = "https://github.com/scDataset/scDataset/issues"
Documentation = "https://scdataset.github.io/"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
# Enable doctest for module docstrings
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]

[tool.coverage.run]
source = ["src/scdataset"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# Ruff configuration (linting + formatting)
[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "docs/build",
    "build",
    "dist",
    "benchmarks",  # Benchmarks have different requirements (E402 for env setup)
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["scdataset"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # skip assert warnings (used in tests)
